[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgelight"
version = "0.1.0"
description = "A PyQt6-based screen edge lighting overlay for Windows and Linux"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Graphics",
]
keywords = ["desktop", "overlay", "lighting", "pyqt6", "gui"]
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/edgelight"
Repository = "https://github.com/yourusername/edgelight"
Issues = "https://github.com/yourusername/edgelight/issues"

[project.scripts]
edgelight = "edgelight:main"

[tool.black]
line-length = 127
target-version = ['py38']
include = '\.pyi?$'$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 127
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true